added css, placeholder image, incomplete

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Welcome To My Portfolio</title>
-<!-- <link rel="stylesheet" href="./assets/css/reset.css" /> -->
+    <link rel="stylesheet" href="./assets/css/reset.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
 
   <body>
@@ -29,72 +30,73 @@
       </nav>
     </header>
 
-    <img class="hero"/>
-      <h2>Cool Subtitle Here!</h2>
+    <section class="hero">
+      <h2 class="text-overlay">Thanks for stopping by!</h2>
+    </section>
 
-    <main>
-      <section class = "about-me-paragraph">
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam quia fugiat quo facere sit voluptas ratione 
-          commodi aspernatur ipsa perspiciatis dolorum porro sequi nobis fuga sed illum, voluptatum ex reiciendis.
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam quia fugiat quo facere sit voluptas ratione 
-          commodi aspernatur ipsa perspiciatis dolorum porro sequi nobis fuga sed illum, voluptatum ex reiciendis.
-        </p>
-        <br>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam quia fugiat quo facere sit voluptas ratione 
-          commodi aspernatur ipsa perspiciatis dolorum porro sequi nobis fuga sed illum, voluptatum ex reiciendis.
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam quia fugiat quo facere sit voluptas ratione 
-          commodi aspernatur ipsa perspiciatis dolorum porro sequi nobis fuga sed illum, voluptatum ex reiciendis.
-        </p>
-      </section>
-
-      <section class = "Horiseon">
-        <h3>Horiseon Refactor</h3>
-          <p>HTML/CSS</p>
-      </section>
-
-      <section class = "Placeholder1">
-        <h3>Project Placeholder</h3>
-          <p>HTML/CSS/JavaScript</p>
-      </section>
-
-      <section class = "Placeholder2">
-        <h3>Project Placeholder</h3>
-          <p>HTML/CSS/JavaScript</p>
-      </section>
-
-      <section class = "Placeholder3">
-        <h3>Project Placeholder</h3>
-          <p>HTML/CSS/JavaScript</p>
-      </section>
-    </main>
-    
-    <aside>
-      <section>
-        <h2>About Me</h2>
-      </section>
-
-      <section>
-        <h2>Work</h2>
-      </section>
-
-      <section>
-        <h2>Contact Me</h2>
-            <nav>
-              <ul>
-                <li>
-                  555.555.5555
-                </li>
-                <li>
-                  <a href="#email">garibay_r18@yahoo.com</a>
-                </li>
-                <li>
-                  <a href="#github">Github</a>
-                </li>
-              </ul>
-            </nav>
+    <main class = "container">
+      <aside>
+        <section class="about-me-aside">
+          <section id="about-me">
+            <h2>About Me</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam quia fugiat quo facere sit voluptas ratione 
+              commodi aspernatur ipsa perspiciatis dolorum porro sequi nobis fuga sed illum, voluptatum ex reiciendis.
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam quia fugiat quo facere sit voluptas ratione 
+              commodi aspernatur ipsa perspiciatis dolorum porro sequi nobis fuga sed illum, voluptatum ex reiciendis.
+            </p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam quia fugiat quo facere sit voluptas ratione 
+              commodi aspernatur ipsa perspiciatis dolorum porro sequi nobis fuga sed illum, voluptatum ex reiciendis.
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam quia fugiat quo facere sit voluptas ratione 
+              commodi aspernatur ipsa perspiciatis dolorum porro sequi nobis fuga sed illum, voluptatum ex reiciendis.
+            </p>
+          </section>
+        </section>
+  
+        <section class="work-aside">
+          <h2 id="work">Work</h2>
         </section>
       </aside>
+
+      <section class="work-boxes">
+        <section class = "Horiseon">
+          <h3>Horiseon Refactor</h3>
+            <p>HTML/CSS</p>
+        </section>
+
+        <section class = "Placeholder1">
+          <h3>Project Placeholder</h3>
+            <p>HTML/CSS/JavaScript</p>
+        </section>
+
+        <section class = "Placeholder2">
+          <h3>Project Placeholder</h3>
+            <p>HTML/CSS/JavaScript</p>
+        </section>
+
+        <section class = "Placeholder3">
+          <h3>Project Placeholder</h3>
+            <p>HTML/CSS/JavaScript</p>
+        </section>
+      </section>
+
+      <footer id="contact-me">
+        <h3>Contact Me</h3>
+        <section>
+          <ul>
+            <li>
+              555.555.5555
+            </li> 
+            <li>
+              <a href="#email">garibay_r18@yahoo.com</a>
+            </li>
+            <li>
+              <a href="#github">Github</a>
+            </li>
+          </ul>
+        </section>
+      </footer>
+    </main>
   </body>
 </html>    
